--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Johannes Götze <jos-mail@gmx.de>"]
 edition = "2021"
 build = "build.rs"
+description = "A app to calculate credit payment plans"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,3 +15,7 @@ thousands ="*"
 
 [build-dependencies]
 slint-build = "1.4"
+
+[package.metadata.bundle]
+name = "Credit Calculator"
+identifier = "io.github.joh-go.credit_calculator"
